Fixing up spacing of buttons in the book section

--- a/assets/scss/components/_sections.scss
+++ b/assets/scss/components/_sections.scss
@@ -452,18 +452,17 @@
 
       .cta {
         display: flex;
-        padding: 0 $beat;
+        padding: 0 $beat * 2;
         justify-content: space-between;
         .button {
           width: 100%;
           margin-right: $beat;
           &:not(.download) {
-            padding-left: $beat;
-            padding-right: $beat;
+            padding-left: 0px;
+            padding-right: 0px;
           }
           + .button {
             margin-right: 0;
-            margin-left: $beat;
           }
         }
       }
